syntax = "proto3";


option go_package = "samplepb";

message User {
    string username = 1;
    string email = 2;
}

message Notification {
    enum Status {
        UNKNOWN = 0;
        UNREAD = 1;
        READ = 2;
    }
    string title = 1;
    string body = 2;
    Status status = 3;
    User from = 4;
    User to = 5;
}

message Inbox {
    repeated Notification notifications = 1;
    repeated Notification unread_notifications = 2;
}

message SampleResponse {
    User user = 1;
    Inbox inbox = 2;
}

message SampleRequest {
    string token = 1;
    bool show_unread = 2;
}